# ornas

./: .gitignore  .prettierignore  ARCHITECTURE_INDEX.md  BUILD_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  LICENSE  PRIVACY.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SUPPORT.md  TESTING_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  seed_db.py  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_files.sql  003_allow_file_type.sql  004_collections_indexes.sql  005_code_snippets.sql  006_encrypted_storage.sql  007_performance_indexes.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup.rs  clipboard.rs  collections.rs  mod.rs  search.rs  settings.rs  tags.rs  vault.rs
src-tauri/src/domain/: category.rs  clip.rs  collection.rs  config.rs  mod.rs  pipeline.rs  tag.rs  traits.rs  vault.rs
src-tauri/src/infrastructure/: image_store.rs  mod.rs
src-tauri/src/infrastructure/clipboard/: classifier.rs  mod.rs  monitor.rs  native.rs
src-tauri/src/infrastructure/database/: clip_repo.rs  collection_repo.rs  connection.rs  migrations.rs  mod.rs  search_repo.rs  settings_repo.rs  tag_repo.rs  vault_repo.rs
src-tauri/src/services/: backup_manager.rs  clipboard_service.rs  collection_service.rs  crypto_service.rs  file_clipboard.rs  mod.rs  search_service.rs  settings_service.rs  tag_service.rs
(+168 files in other folders)
