[package]
name = "ornas"
version = "0.9.0-beta"
description = "Never Lose a Copy — Clipboard productivity workspace"
authors = ["ORNAS Contributors"]
license = "MIT"
repository = "https://github.com/sanromarth/ornas"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ornas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
rusqlite_migration = "1"
clipboard-rs = "0.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
regex = "1"
tokio = { version = "1", features = ["sync", "time"] }
zip = "7.2.0"
mime_guess = "2.0.5"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
